--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -898,7 +898,7 @@
           <a href="https://y0sum3x.medium.com/remember-these-xss-days-6a950073cb55" target="_blank">Remember These XSS Days?</a> : Calogero Joseph <br><br>
           <a href="https://medium.com/@hardeepsinghsandhu537/reflected-xss-hardeepsing-af647af48186" target="_blank">Reflected XSS — Hardeepsinghsandhu537</a> : Hardeep Singh Sandhu <br><br>
           <a href="https://tryhackme.com/room/mitre" target="_blank">MITRE</a> <br><br>
-          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> <br><br>
+          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> : TryHackMe <br><br>
           <a href="https://p.ost2.fyi/dashboard" target="_blank">Reverse Enginnering Course</a> : OST2.FY1 <br><br>
         </p>
         <br><br>
@@ -910,7 +910,7 @@
           <a href="https://mshibilmp.medium.com/how-i-got-my-first-appreciation-f3f6c15cf87" target="_blank">How I got my first Acknowledgement ?!</a> : 5h1b1L <br><br>
           <a href="https://medium.com/@karanrathore402/how-can-i-do-broken-link-hijacking-in-just-5-mintues-unique-technique-b548fd1a5dfd" target="_blank">How Can I Do Broken Link Hijacking In Just 5 Mintues(Unique Technique)?</a> : KaranJohar(BUG BOUNTY HUNTER) <br><br>
           <a href="https://p.ost2.fyi/dashboard" target="_blank">Reverse Enginnering Course</a> : OST2.FY1 <br><br>
-          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> <br><br>
+          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> : TryHackMe <br><br>
           <a href="https://tryhackme.com/room/dogcat" target="_blank">dogcat</a> : TryHackMe <br><br>
           <a href="https://www.udemy.com/course/security-601-exams/" target="_blank">CompTIA Security+ (SY0-601) Practice Exams & Simulated PBQs </a> : Jason Dion <br><br>
           <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">InfosecPrep</a> : Offensive Security Proving Grounds (Play)
@@ -931,7 +931,7 @@
           <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
           <a href="https://medium.com/@e13v3n/tryhackme-boiler-ctf-writeup-dd191210c02" target="_blank">TryHackMe — Boiler CTF Writeup</a> : Anushka Soni <br><br>
           <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Katana</a> : Offensive Security Proving Grounds (Play) <br><br>
-          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> <br><br>
+          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> : TryHackMe <br><br>
           <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> <br><br> : 0xinfection <br><br>
           <a href="https://www.udemy.com/course/security-601-exams/" target="_blank">CompTIA Security+ (SY0-601) Practice Exams & Simulated PBQs </a> : Jason Dion <br><br>
         </p>
@@ -948,9 +948,25 @@
           <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">SunsetNoontide</a> : Offensive Security Proving Grounds (Play) <br><br>
           <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
           <a href="https://www.udemy.com/course/security-601-exams/" target="_blank">CompTIA Security+ (SY0-601) Practice Exams & Simulated PBQs </a> : Jason Dion <br><br>
-          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> <br><br>
+          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> : TryHackMe <br><br>
         </p>
         <br><br>
+        <h3>Day 83: Dec 30 2021</h3><br>
+        <p>
+          <a href="https://infosecwriteups.com/story-of-a-weird-csrf-bug-bde1129c106e" target="_blank">Story of a weird CSRF bug</a> : Sudhanshu Rajbhar <br><br>
+          <a href="https://medium.com/@hawk101/finding-injection-issues-in-hidden-parameters-8dd4b0da85e5" target="_blank">Finding injection issues in hidden parameters</a> : bhargabKaushik <br><br>
+          <a href="https://amit-lt.medium.com/a-story-of-idor-which-leads-to-privacy-violation-78c1b4c710fb" target="_blank">A Story of IDOR which leads to privacy violation</a> : Amit Kumar <br><br>
+          <a href="https://amit-lt.medium.com/my-first-bounty-story-d588c550b5bf" target="_blank">My First Bounty Story</a> : Amit Kumar <br></br>
+          <a href="https://medium.com/@mhzcyber/how-we-found-bugs-and-chained-them-in-the-company-that-finds-bugs-9558f0b7e20a" target="_blank">How we found bugs and chained them in the company that finds bugs!</a> : Mohammad Hussam Alzeyyat <br><br>
+          <a href="https://medium.com/@jawadmahdi/how-to-hunt-on-host-based-bug-bounty-program-f8f66a6c535b" target="_blank">How to hunt on HOST based Bug Bounty Program?</a> : Jawad Mahdi <br><br>
+          <a href="https://infosecwriteups.com/logical-flaw-resulting-path-hijacking-dd4d1e1e832f" target="_blank">Logical Flaw Resulting Path Hijacking</a> Veshraj Ghimire <br><br>
+          <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> <br><br> : 0xinfection <br><br>
+          <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">BBSCute</a> : Offensive Security Proving Grounds (Play) <br><br>
+          <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
+          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> : TryHackMe <br><br>
+          <a href="https://tryhackme.com/room/fortress" target="_blank">Fortress</a> : TryHackMe <br><br>
+          <a href="https://tryhackme.com/room/burpsuitebasics" target="_blank">Burp Suite: The Basics</a> : TryHackMe <br><br>
+        </p>
         <br><br>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
