--- a/WebPages/daily.html
+++ b/WebPages/daily.html
@@ -968,6 +968,24 @@
           <a href="https://tryhackme.com/room/burpsuitebasics" target="_blank">Burp Suite: The Basics</a> : TryHackMe <br><br>
         </p>
         <br><br>
+        <h3>Day 84: Dec 31 2021</h3><br>
+        <p>
+          <a href="https://haox-hapot.medium.com/email-attacks-that-are-proven-to-be-devastating-2564c1e2d727" target="_blank">Email attacks that are proven to be devastating</a> : Haox <br><br>
+          <a href="https://infosecwriteups.com/exposing-millions-of-critical-data-on-kerala-civil-supplies-website-cc3a4bed5d07" target="_blank">Exposing millions of critical data on Kerala Civil Supplies Website!</a> Krishnadev P Melevila <br><br>
+          <a href="https://janmuhammadzaidi.medium.com/how-i-was-able-to-bypass-waf-and-find-the-origin-ip-and-a-few-sensitive-files-fc445180adb7" target="_blank">How I was able to bypass WAF and find the origin IP and a few sensitive files</a> : Jan Muhammad Zaidi <br><br>
+          <a href="https://medium.com/pentesternepal/bypassing-ebay-xss-protection-8cf73466ba0f" target="_blank">ByPassing eBay XSS Protection</a> : Nirmal Dahal <br><br>
+          <a href="https://medium.com/@aqibshah786/account-takeover-in-private-program-by-simply-guessing-auth-token-simple-p1-6c45e93c742f" target="_blank">Account takeover in private program by simply guessing auth token (simple) </a> : Aqib Shah <br><br>
+          <a href="https://rootissh.in/httpx-a-tool-for-web-server-fingerprinting-574515cf49af" target="_blank">httpx — A tool for Web Server Fingerprinting</a> : Prateek Kuber <br><br>
+          <a href="https://vish-hal.medium.com/how-having-a-student-mail-can-help-you-in-info-sec-c5d433d7182d" target="_blank">How having a student mail can help you in Info-sec.</a> : vishal sharma <br><br>
+          <a href="https://medium.com/@sathvika03/my-first-p4-finding-b064f0552f53" target="_blank">My first P4 finding</a> H4ckt3r <br><br>
+          <a href="https://medium.com/@iftequar.154/csrf-bypass-leading-to-account-takeover-6966b2d9788f" target="_blank">CSRF bypass leading to account takeover</a> : Iftequar <br><br>
+          <a href="https://tryhackme.com/room/wreath" target="_blank">Wreath</a> : TryHackMe <br><br>
+          <a href="https://tryhackme.com/room/watcher" target="_blank">Watcher</a> : TryHackMe <br><br>
+          <a href="https://tryhackme.com/room/burpsuiterepeater" target="_blank">Burp Suite: Repeater</a> : TryHackMe <br><br>
+          <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> <br><br> : 0xinfection <br><br>
+          <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Potato</a> : Offensive Security Proving Grounds (Play) <br><br>
+          <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
+        </p>
         <p>Copyright © 2021 Aditya Dindi</p>
       </div> 
     </div>
