--- a/WebPages/daily-2021.html
+++ b/WebPages/daily-2021.html
@@ -7,16 +7,16 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/website-1/css/style.css">
 
     <title>Aditya's Personal Site</title>
-    <link rel="icon" href="/img/detective.png">
+    <link rel="icon" href="/website-1/img/detective.png">
   </head>
   <section class="container"></section>
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="/index.html">H🔍ME</a>
+      <a class="navbar-brand" href="/website-1/index.html">H🔍ME</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -63,9 +63,9 @@
   <center>
     <div class="container text-white">
       <div class="des">
-        <img src="/img/pyrus.jpg" class="img-fluid round"> <br><br>
+        <img src="/website-1/img/pyrus.jpg" class="img-fluid round"> <br><br>
         <h1>Daily</h1> <br><br>
-        <h1 id="tryhackme" style="color:DodgerBlue">100 Days/14 Weeks of Hacking Challenge</h1><br>
+        <h1 id="tryhackme" style="color:DodgerBlue">Daily Hacking Challenge</h1><br>
         <hr>
         <h2 id="week1">Week 1</h2> <br><br><br>
         <h3>Day 1: Oct 10 2021</h3><br>
