--- a/WebPages/daily-2021.html
+++ b/WebPages/daily-2021.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/website-1/css/style.css">
 
     <title>Aditya's Personal Site</title>
-    <link rel="icon" href="/website-1/img/detective.png">
+    <link rel="icon" href="/website/img/detective.png">
   </head>
   <section class="container"></section>
   <body>
