--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="/website-1/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 
     <title>Aditya's Personal Site</title>
-    <link rel="icon" href="/website-1/img/detective.png">
+    <link rel="icon" href="/img/detective.png">
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -25,7 +25,7 @@
             <a class="nav-link" href="https://blog.adityadindi.me" target="_blank">BLOG</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/website-1/WebPages/daily-2022.html" target="_blank">DAILY</a>
+            <a class="nav-link" href="/WebPages/daily-2022.html" target="_blank">DAILY</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#projects">PROJECTS</a>
@@ -37,7 +37,7 @@
             <a class="nav-link" href="#skills">SKILLS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/website-1/WebPages/activities.html" target="_blank">ACTIVITIES / INTERESTS</a>
+            <a class="nav-link" href="/WebPages/activities.html" target="_blank">ACTIVITIES / INTERESTS</a>
           </li>
     </div>
   </nav>
@@ -45,18 +45,18 @@
   <center>
     <div class="container text-white">
       <div class="des">
-        <img src="img/pyrus.jpg" class="img-fluid round"> <br>
+        <img src="/img/pyrus.jpg" class="img-fluid round"> <br>
         <h1>Aditya Dindi</h1> <br>
         <small class="text-muted lead"><strong>Security Researcher at <a href="https://hackersarcade.tech/" class="text-decoration-none" target="_blank">Hackers Arcade</strong></a></small> <br>
         <p class="lead">I am a Cyber Security Student at the University of Texas at San Antonio </p> <br>
-        <a class="btn btn-outline-light" href="/website-1/WebPages/AdityaDindiResume.pdf" role="button">MY RESUME</a>
+        <a class="btn btn-outline-light" href="/WebPages/AdityaDindiResume.pdf" role="button">MY RESUME</a>
       </div> 
       <hr>
       <h1 id="work-exp">PROJECTS</h1> <br>
       <small class="text-muted lead"><strong><!--<a href="/" class="text-decoration-none" target="_blank">-->Cyber Security Homelab</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://hackersarcade.medium.com/noobs-guide-to-web-application-penetration-testing-e3ae921d57d1" class="text-decoration-none" target="_blank">Web Application Hacking Guide</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Personal Website</strong></a></small> <br><br>
-      <small class="text-muted lead"><strong><a href="/website-1/WebPages/daily-2021.html" class="text-decoration-none" target="_blank">Daily Hacking Challenge 2021 / Daily Hacking Guide (Resources)</a></strong></small> <br><br>
+      <small class="text-muted lead"><strong><a href="/WebPages/daily-2021.html" class="text-decoration-none" target="_blank">Daily Hacking Challenge 2021 / Daily Hacking Guide (Resources)</a></strong></small> <br><br>
       <br>
       <hr>
       <br>
