--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -53,7 +53,7 @@
           <a href="https://tryhackme.com/room/blog" target="_blank">Blog</a> : TryHackMe <br><br>
           <a href="https://tryhackme.com/jr/burpsuiteintruder" target="_blank">Burp Suite: Intruder</a> : TryHackMe <br><br>
           <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
-          <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> <br><br> : 0xinfection <br><br>
+          <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
           <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Shakabrah</a> : Offensive Security Proving Grounds (Play) <br><br>
           <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
           Security+ 
