--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -40,6 +40,15 @@
         <h2 id="week1">Week 1</h2> <br><br><br>
         <h3>Day 1: Jan 1 2022</h3><br>
         <p>
+          <h5>My Activities</h5>
+          <a href="https://tryhackme.com/room/blog" target="_blank">Blog</a> : TryHackMe <br><br>
+          <a href="https://tryhackme.com/jr/burpsuiteintruder" target="_blank">Burp Suite: Intruder</a> : TryHackMe <br><br>
+          <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
+          <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
+          <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Shakabrah</a> : Offensive Security Proving Grounds (Play) <br><br>
+          <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
+          Security+ 
+          <h5>My Reads</h5>
           <a href="https://shriyanssudhi.medium.com/an-easy-bug-the-twitter-story-97ac7d34f8bb" target="_blank">An easy bug: The Twitter story</a> : Shriyans Sudhi <br><br>
           <a href="https://medium.com/@sarafsaransh321/the-password-bypass-leads-to-full-account-takeover-9aefa7e3a9dd" target="_blank">The Password Bypass Leads to Full-Account-Takeover</a> : Saransh Saraf <br><br>
           <a href="https://ruvlol.medium.com/1000-for-open-redirect-via-unknown-technique-675f5815e38a" target="_blank">1000$ for Open redirect via unknown technique [BugBounty writeup]</a> : ruvlol <br><br>
@@ -50,13 +59,6 @@
           <a href="https://medium.com/@imunissar786/how-i-was-able-to-steal-private-files-of-any-user-on-larksuite-c0e2757429e2" target="_blank">How i was able to steal private files of any user on Larksuite</a> : Imran Nissar <br><br>
           <a href="https://systemweakness.com/simple-recon-methodology-a9ff080b40c8" target="_blank">Simple Recon Methodology</a> : Abhinav Pathak <br><br>
           <a href="https://sm4rty.medium.com/hunting-for-bugs-in-file-upload-feature-c3b364fb01ba" target="_blank">Hunting for Bugs in File Upload Feature</a> Sm4rty <br><br>
-          <a href="https://tryhackme.com/room/blog" target="_blank">Blog</a> : TryHackMe <br><br>
-          <a href="https://tryhackme.com/jr/burpsuiteintruder" target="_blank">Burp Suite: Intruder</a> : TryHackMe <br><br>
-          <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
-          <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
-          <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Shakabrah</a> : Offensive Security Proving Grounds (Play) <br><br>
-          <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
-          Security+ 
         </p>
         <br><br>
         <br><br>
