--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -40,27 +40,29 @@
         <h2 id="week1">Week 1</h2> <br><br><br>
         <h3>Day 1: Jan 1 2022</h3><br>
         <p>
-          <h5>My Activities</h5>
-          <a href="https://tryhackme.com/room/blog" target="_blank">Blog</a> : TryHackMe <br><br>
-          <a href="https://tryhackme.com/jr/burpsuiteintruder" target="_blank">Burp Suite: Intruder</a> : TryHackMe <br><br>
-          <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
-          <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
-          <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Shakabrah</a> : Offensive Security Proving Grounds (Play) <br><br>
-          <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
-          Security+ 
-          <h5>My Reads</h5>
-          <a href="https://shriyanssudhi.medium.com/an-easy-bug-the-twitter-story-97ac7d34f8bb" target="_blank">An easy bug: The Twitter story</a> : Shriyans Sudhi <br><br>
-          <a href="https://medium.com/@sarafsaransh321/the-password-bypass-leads-to-full-account-takeover-9aefa7e3a9dd" target="_blank">The Password Bypass Leads to Full-Account-Takeover</a> : Saransh Saraf <br><br>
-          <a href="https://ruvlol.medium.com/1000-for-open-redirect-via-unknown-technique-675f5815e38a" target="_blank">1000$ for Open redirect via unknown technique [BugBounty writeup]</a> : ruvlol <br><br>
-          <a href="https://medium.com/hackernoon/20-hours-18-and-11-million-passwords-cracked-c4513f61fdb1" target="_blank">20 Hours, $18, and 11 Million Passwords Cracked</a> : Alice Henshaw <br><br>
-          <a href="https://medium.com/@varmaanu001/reset-password-token-lead-to-account-takeover-19e5eb3cf816" target="_blank">Reset password Token lead to account takeover</a> : Anurag__Verma <br><br>
-          <a href="https://hakluke.medium.com/haklukes-ultimate-oscp-guide-part-3-practical-hacking-tips-and-tricks-c38486f5fc97" target="_blank">Hakluke’s Ultimate OSCP Guide: Part 3 — Practical hacking tips and tricks</a> : Luke Stephens (@hakluke) <br><br>
-          <a href="https://medium.com/s/story/how-to-get-your-first-job-as-a-hacker-7c1f5c4bf4b3" target="_blank">How to Get Your First Job as a Hacker</a> : Luke Stephens (@hakluke) <br><br>
-          <a href="https://medium.com/@imunissar786/how-i-was-able-to-steal-private-files-of-any-user-on-larksuite-c0e2757429e2" target="_blank">How i was able to steal private files of any user on Larksuite</a> : Imran Nissar <br><br>
-          <a href="https://systemweakness.com/simple-recon-methodology-a9ff080b40c8" target="_blank">Simple Recon Methodology</a> : Abhinav Pathak <br><br>
-          <a href="https://sm4rty.medium.com/hunting-for-bugs-in-file-upload-feature-c3b364fb01ba" target="_blank">Hunting for Bugs in File Upload Feature</a> Sm4rty <br><br>
+          <h5>My Activities</h5> <br>
+            <a href="https://tryhackme.com/room/blog" target="_blank">Blog</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/jr/burpsuiteintruder" target="_blank">Burp Suite: Intruder</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
+            <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Shakabrah</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
+            Security+ 
+          <br><br>
+          <h5>My Reads</h5><br>
+            <a href="https://shriyanssudhi.medium.com/an-easy-bug-the-twitter-story-97ac7d34f8bb" target="_blank">An easy bug: The Twitter story</a> : Shriyans Sudhi <br><br>
+            <a href="https://medium.com/@sarafsaransh321/the-password-bypass-leads-to-full-account-takeover-9aefa7e3a9dd" target="_blank">The Password Bypass Leads to Full-Account-Takeover</a> : Saransh Saraf <br><br>
+            <a href="https://ruvlol.medium.com/1000-for-open-redirect-via-unknown-technique-675f5815e38a" target="_blank">1000$ for Open redirect via unknown technique [BugBounty writeup]</a> : ruvlol <br><br>
+            <a href="https://medium.com/hackernoon/20-hours-18-and-11-million-passwords-cracked-c4513f61fdb1" target="_blank">20 Hours, $18, and 11 Million Passwords Cracked</a> : Alice Henshaw <br><br>
+            <a href="https://medium.com/@varmaanu001/reset-password-token-lead-to-account-takeover-19e5eb3cf816" target="_blank">Reset password Token lead to account takeover</a> : Anurag__Verma <br><br>
+            <a href="https://hakluke.medium.com/haklukes-ultimate-oscp-guide-part-3-practical-hacking-tips-and-tricks-c38486f5fc97" target="_blank">Hakluke’s Ultimate OSCP Guide: Part 3 — Practical hacking tips and tricks</a> : Luke Stephens (@hakluke) <br><br>
+            <a href="https://medium.com/s/story/how-to-get-your-first-job-as-a-hacker-7c1f5c4bf4b3" target="_blank">How to Get Your First Job as a Hacker</a> : Luke Stephens (@hakluke) <br><br>
+            <a href="https://medium.com/@imunissar786/how-i-was-able-to-steal-private-files-of-any-user-on-larksuite-c0e2757429e2" target="_blank">How i was able to steal private files of any user on Larksuite</a> : Imran Nissar <br><br>
+            <a href="https://systemweakness.com/simple-recon-methodology-a9ff080b40c8" target="_blank">Simple Recon Methodology</a> : Abhinav Pathak <br><br>
+            <a href="https://sm4rty.medium.com/hunting-for-bugs-in-file-upload-feature-c3b364fb01ba" target="_blank">Hunting for Bugs in File Upload Feature</a> Sm4rty <br><br>
         </p>
         <br><br>
+
         <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
