--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -40,7 +40,7 @@
         <h2 id="week1">Week 1</h2> <br><br><br>
         <h3>Day 1: Jan 1 2022</h3><br>
         <p>
-          <h5>My Activities</h5> <br>
+          <h5>Activities</h5><br>
             <a href="https://tryhackme.com/room/blog" target="_blank">Blog</a> : TryHackMe <br><br>
             <a href="https://tryhackme.com/jr/burpsuiteintruder" target="_blank">Burp Suite: Intruder</a> : TryHackMe <br><br>
             <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
@@ -49,7 +49,7 @@
             <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
             Security+ 
           <br><br>
-          <h5>My Reads</h5><br>
+          <h5>Blog Reads</h5><br>
             <a href="https://shriyanssudhi.medium.com/an-easy-bug-the-twitter-story-97ac7d34f8bb" target="_blank">An easy bug: The Twitter story</a> : Shriyans Sudhi <br><br>
             <a href="https://medium.com/@sarafsaransh321/the-password-bypass-leads-to-full-account-takeover-9aefa7e3a9dd" target="_blank">The Password Bypass Leads to Full-Account-Takeover</a> : Saransh Saraf <br><br>
             <a href="https://ruvlol.medium.com/1000-for-open-redirect-via-unknown-technique-675f5815e38a" target="_blank">1000$ for Open redirect via unknown technique [BugBounty writeup]</a> : ruvlol <br><br>
@@ -62,7 +62,24 @@
             <a href="https://sm4rty.medium.com/hunting-for-bugs-in-file-upload-feature-c3b364fb01ba" target="_blank">Hunting for Bugs in File Upload Feature</a> Sm4rty <br><br>
         </p>
         <br><br>
-
+        <h3>Day 2: Jan 2 2022</h3><br>
+        <p>
+          <h5>Activites</h5><br>
+            <a href="https://tryhackme.com/jr/burpsuiteom" target="_blank">Burp Suite: Other Modules</a> : TryHackMe <br><br>
+            <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
+            <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Sar</a> : Offensive Security Proving Grounds (Play) <br><br>
+            <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>     
+          <h5>Blog Reads</h5><br>
+            <a href="https://medium.com/pentesternepal/a-tale-of-zero-click-account-takeover-56b51fdbd7ae" target="_blank">A tale of zero click account takeover</a> : Veshraj Ghimire <br><br>
+            <a href="https://54m4ri74n.medium.com/hacking-android-mobile-using-meterpreter-257707d0e076" target="_blank">Hacking Android Mobile using Meterpreter</a> : Kapil Verma <br><br>
+            <a href="https://rv09.medium.com/my-first-google-hof-b66c54f6acfd" target="_blank">My first Google HOF</a> : RV Sharma <br><br>
+            <a href="https://darklotus.medium.com/part-2-easy-xss-on-mostly-educational-websites-via-moodle-7c7a3ee84b70" target="_blank">Part 2: Easy XSS On Mostly Educational Websites Via Moodle</a> : DarkLotus <br><br>
+            <a href="https://hbothra22.medium.com/learn365-challenge-review-year-2021-in-a-nutshell-4efab0773877" target="_blank">Learn365 Challenge Review & Year 2021 in a Nutshell</a> : Harsh Bothra <br><br>
+            <a href="https://monish-basaniwal.medium.com/open-redirect-vulnerability-on-zapier-an-accidental-find-4cbbf029956c" target="_blank">Open Redirect Vulnerability On Zapier: An Accidental Find</a> : Monish Basaniwal <br><br>
+            <a href="https://medium.com/@taniyatesting11/bounty-evaluation-github-15-000-us-dollars-rate-limit-d6c07d73c948" target="_blank">Bounty Evaluation GitHub = $15,000 US Dollars | Rate Limit</a> : Taniya Agarwal <br><br>
+            <a href="https://medium.com/@sam0-0/how-i-got-my-first-rce-while-learning-python-75f51563309c" target="_blank">HOW I GOT MY FIRST RCE WHILE LEARNING PYTHON</a> : Sam <br><br>
+        </p>
         <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
