--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -47,7 +47,7 @@
             <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
             <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Shakabrah</a> : Offensive Security Proving Grounds (Play) <br><br>
             <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
-            Security+ 
+            Security+ <br><br>
           <br><br>
           <h5>Blog Reads</h5><br>
             <a href="https://shriyanssudhi.medium.com/an-easy-bug-the-twitter-story-97ac7d34f8bb" target="_blank">An easy bug: The Twitter story</a> : Shriyans Sudhi <br><br>
@@ -69,7 +69,9 @@
             <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
             <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
             <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Sar</a> : Offensive Security Proving Grounds (Play) <br><br>
-            <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>     
+            <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>   
+            Security+ <br><br>  
+          <br><br>
           <h5>Blog Reads</h5><br>
             <a href="https://medium.com/pentesternepal/a-tale-of-zero-click-account-takeover-56b51fdbd7ae" target="_blank">A tale of zero click account takeover</a> : Veshraj Ghimire <br><br>
             <a href="https://54m4ri74n.medium.com/hacking-android-mobile-using-meterpreter-257707d0e076" target="_blank">Hacking Android Mobile using Meterpreter</a> : Kapil Verma <br><br>
