--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -41,47 +41,100 @@
         <h3>Day 1: Jan 1 2022</h3><br>
         <p>
           <h5>Activities</h5><br>
-            <a href="https://tryhackme.com/room/blog" target="_blank">Blog</a> : TryHackMe <br><br>
-            <a href="https://tryhackme.com/jr/burpsuiteintruder" target="_blank">Burp Suite: Intruder</a> : TryHackMe <br><br>
-            <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
-            <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
-            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Shakabrah</a> : Offensive Security Proving Grounds (Play) <br><br>
-            <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
-            Security+ <br><br>
+            <p>
+              <a href="https://tryhackme.com/room/blog" target="_blank">Blog</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/jr/burpsuiteintruder" target="_blank">Burp Suite: Intruder</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
+              <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Shakabrah</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>
+              Security+ <br><br>
+            </p>
           <br><br>
           <h5>Blog Reads</h5><br>
-            <a href="https://shriyanssudhi.medium.com/an-easy-bug-the-twitter-story-97ac7d34f8bb" target="_blank">An easy bug: The Twitter story</a> : Shriyans Sudhi <br><br>
-            <a href="https://medium.com/@sarafsaransh321/the-password-bypass-leads-to-full-account-takeover-9aefa7e3a9dd" target="_blank">The Password Bypass Leads to Full-Account-Takeover</a> : Saransh Saraf <br><br>
-            <a href="https://ruvlol.medium.com/1000-for-open-redirect-via-unknown-technique-675f5815e38a" target="_blank">1000$ for Open redirect via unknown technique [BugBounty writeup]</a> : ruvlol <br><br>
-            <a href="https://medium.com/hackernoon/20-hours-18-and-11-million-passwords-cracked-c4513f61fdb1" target="_blank">20 Hours, $18, and 11 Million Passwords Cracked</a> : Alice Henshaw <br><br>
-            <a href="https://medium.com/@varmaanu001/reset-password-token-lead-to-account-takeover-19e5eb3cf816" target="_blank">Reset password Token lead to account takeover</a> : Anurag__Verma <br><br>
-            <a href="https://hakluke.medium.com/haklukes-ultimate-oscp-guide-part-3-practical-hacking-tips-and-tricks-c38486f5fc97" target="_blank">Hakluke’s Ultimate OSCP Guide: Part 3 — Practical hacking tips and tricks</a> : Luke Stephens (@hakluke) <br><br>
-            <a href="https://medium.com/s/story/how-to-get-your-first-job-as-a-hacker-7c1f5c4bf4b3" target="_blank">How to Get Your First Job as a Hacker</a> : Luke Stephens (@hakluke) <br><br>
-            <a href="https://medium.com/@imunissar786/how-i-was-able-to-steal-private-files-of-any-user-on-larksuite-c0e2757429e2" target="_blank">How i was able to steal private files of any user on Larksuite</a> : Imran Nissar <br><br>
-            <a href="https://systemweakness.com/simple-recon-methodology-a9ff080b40c8" target="_blank">Simple Recon Methodology</a> : Abhinav Pathak <br><br>
-            <a href="https://sm4rty.medium.com/hunting-for-bugs-in-file-upload-feature-c3b364fb01ba" target="_blank">Hunting for Bugs in File Upload Feature</a> Sm4rty <br><br>
+            <p>
+              <a href="https://shriyanssudhi.medium.com/an-easy-bug-the-twitter-story-97ac7d34f8bb" target="_blank">An easy bug: The Twitter story</a> : Shriyans Sudhi <br><br>
+              <a href="https://medium.com/@sarafsaransh321/the-password-bypass-leads-to-full-account-takeover-9aefa7e3a9dd" target="_blank">The Password Bypass Leads to Full-Account-Takeover</a> : Saransh Saraf <br><br>
+              <a href="https://ruvlol.medium.com/1000-for-open-redirect-via-unknown-technique-675f5815e38a" target="_blank">1000$ for Open redirect via unknown technique [BugBounty writeup]</a> : ruvlol <br><br>
+              <a href="https://medium.com/hackernoon/20-hours-18-and-11-million-passwords-cracked-c4513f61fdb1" target="_blank">20 Hours, $18, and 11 Million Passwords Cracked</a> : Alice Henshaw <br><br>
+              <a href="https://medium.com/@varmaanu001/reset-password-token-lead-to-account-takeover-19e5eb3cf816" target="_blank">Reset password Token lead to account takeover</a> : Anurag__Verma <br><br>
+              <a href="https://hakluke.medium.com/haklukes-ultimate-oscp-guide-part-3-practical-hacking-tips-and-tricks-c38486f5fc97" target="_blank">Hakluke’s Ultimate OSCP Guide: Part 3 — Practical hacking tips and tricks</a> : Luke Stephens (@hakluke) <br><br>
+              <a href="https://medium.com/s/story/how-to-get-your-first-job-as-a-hacker-7c1f5c4bf4b3" target="_blank">How to Get Your First Job as a Hacker</a> : Luke Stephens (@hakluke) <br><br>
+              <a href="https://medium.com/@imunissar786/how-i-was-able-to-steal-private-files-of-any-user-on-larksuite-c0e2757429e2" target="_blank">How i was able to steal private files of any user on Larksuite</a> : Imran Nissar <br><br>
+              <a href="https://systemweakness.com/simple-recon-methodology-a9ff080b40c8" target="_blank">Simple Recon Methodology</a> : Abhinav Pathak <br><br>
+              <a href="https://sm4rty.medium.com/hunting-for-bugs-in-file-upload-feature-c3b364fb01ba" target="_blank">Hunting for Bugs in File Upload Feature</a> Sm4rty <br><br>
+            </p>
         </p>
         <br><br>
         <h3>Day 2: Jan 2 2022</h3><br>
         <p>
           <h5>Activites</h5><br>
-            <a href="https://tryhackme.com/jr/burpsuiteom" target="_blank">Burp Suite: Other Modules</a> : TryHackMe <br><br>
-            <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
-            <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
-            <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Sar</a> : Offensive Security Proving Grounds (Play) <br><br>
-            <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>   
+            <p>
+              <a href="https://tryhackme.com/jr/burpsuiteom" target="_blank">Burp Suite: Other Modules</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
+              <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">Sar</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>   
             Security+ <br><br>  
+            </p>
           <br><br>
           <h5>Blog Reads</h5><br>
-            <a href="https://medium.com/pentesternepal/a-tale-of-zero-click-account-takeover-56b51fdbd7ae" target="_blank">A tale of zero click account takeover</a> : Veshraj Ghimire <br><br>
-            <a href="https://54m4ri74n.medium.com/hacking-android-mobile-using-meterpreter-257707d0e076" target="_blank">Hacking Android Mobile using Meterpreter</a> : Kapil Verma <br><br>
-            <a href="https://rv09.medium.com/my-first-google-hof-b66c54f6acfd" target="_blank">My first Google HOF</a> : RV Sharma <br><br>
-            <a href="https://darklotus.medium.com/part-2-easy-xss-on-mostly-educational-websites-via-moodle-7c7a3ee84b70" target="_blank">Part 2: Easy XSS On Mostly Educational Websites Via Moodle</a> : DarkLotus <br><br>
-            <a href="https://hbothra22.medium.com/learn365-challenge-review-year-2021-in-a-nutshell-4efab0773877" target="_blank">Learn365 Challenge Review & Year 2021 in a Nutshell</a> : Harsh Bothra <br><br>
-            <a href="https://monish-basaniwal.medium.com/open-redirect-vulnerability-on-zapier-an-accidental-find-4cbbf029956c" target="_blank">Open Redirect Vulnerability On Zapier: An Accidental Find</a> : Monish Basaniwal <br><br>
-            <a href="https://medium.com/@taniyatesting11/bounty-evaluation-github-15-000-us-dollars-rate-limit-d6c07d73c948" target="_blank">Bounty Evaluation GitHub = $15,000 US Dollars | Rate Limit</a> : Taniya Agarwal <br><br>
-            <a href="https://medium.com/@sam0-0/how-i-got-my-first-rce-while-learning-python-75f51563309c" target="_blank">HOW I GOT MY FIRST RCE WHILE LEARNING PYTHON</a> : Sam <br><br>
+            <p>
+              <a href="https://medium.com/pentesternepal/a-tale-of-zero-click-account-takeover-56b51fdbd7ae" target="_blank">A tale of zero click account takeover</a> : Veshraj Ghimire <br><br>
+              <a href="https://54m4ri74n.medium.com/hacking-android-mobile-using-meterpreter-257707d0e076" target="_blank">Hacking Android Mobile using Meterpreter</a> : Kapil Verma <br><br>
+              <a href="https://rv09.medium.com/my-first-google-hof-b66c54f6acfd" target="_blank">My first Google HOF</a> : RV Sharma <br><br>
+              <a href="https://darklotus.medium.com/part-2-easy-xss-on-mostly-educational-websites-via-moodle-7c7a3ee84b70" target="_blank">Part 2: Easy XSS On Mostly Educational Websites Via Moodle</a> : DarkLotus <br><br>
+              <a href="https://hbothra22.medium.com/learn365-challenge-review-year-2021-in-a-nutshell-4efab0773877" target="_blank">Learn365 Challenge Review & Year 2021 in a Nutshell</a> : Harsh Bothra <br><br>
+              <a href="https://monish-basaniwal.medium.com/open-redirect-vulnerability-on-zapier-an-accidental-find-4cbbf029956c" target="_blank">Open Redirect Vulnerability On Zapier: An Accidental Find</a> : Monish Basaniwal <br><br>
+              <a href="https://medium.com/@taniyatesting11/bounty-evaluation-github-15-000-us-dollars-rate-limit-d6c07d73c948" target="_blank">Bounty Evaluation GitHub = $15,000 US Dollars | Rate Limit</a> : Taniya Agarwal <br><br>
+              <a href="https://medium.com/@sam0-0/how-i-got-my-first-rce-while-learning-python-75f51563309c" target="_blank">HOW I GOT MY FIRST RCE WHILE LEARNING PYTHON</a> : Sam <br><br>
+            </p>
         </p>
+        <br><br>
+        <h3>Day 3: Jan 3 2023</h3><br>
+        <p>
+          <h5>Activites</h5><br>
+            <p>
+              <a href="https://tryhackme.com/room/burpsuiteextender" target="_blank">Burp Suite: Extender</a> : TryHackMe <br><br>
+              <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
+              <a href="https://0xinfection.github.io/reversing/" target="_blank">Reverse Engineering</a> : 0xinfection <br><br>
+              <a href="https://portal.offensive-security.com/proving-grounds/play" target="_blank">FunBoxEasy</a> : Offensive Security Proving Grounds (Play) <br><br>
+              <a href="https://play.picoctf.org/login?redirect=/practice" target="_blank"> PicoCTF </a>: Carnegie Mellon University <br><br>   
+              Security+ <br><br>  
+              <a href="https://www.geeksforgeeks.org/python-programming-language/" target="_blank">Python Programming Language</a> : GeeksforGeeks <br><br>
+            </p>
+          <br><br>
+          <h5>Blog Reads</h5>
+            <p>
+              <a href="https://sapt.medium.com/perform-information-gathering-using-following-tools-on-the-given-targets-cyber-sapiens-internship-12c858166008" target="_blank">Perform Information Gathering using Following Tools on the Given Targets-Cyber Sapiens Internship Task-3</a> : Prajit Sindhkar <br><br>
+              <a href="https://infosecwriteups.com/idor-leads-to-leak-private-details-866563365490" target="_blank">IDOR leads to leak Private Details</a> : annonymous <br><br>
+              <a href="https://m7-arman.medium.com/one-click-to-account-takeover-1f78c6003eba" target="_blank">One Click To Account Takeover</a> : M7.Arman <br><br>
+              <a href="https://infosecwriteups.com/how-i-was-able-to-bypass-cloudflare-for-xss-e94cd827a5d6" target="_blank">How i was able to bypass Cloudflare for XSS!</a> : hosein vita <br><br>
+              <a href="https://medium.com/@Sm9l/bug-bounty-recon-horizontal-correlation-b7c81a32951a" target="_blank">Bug Bounty Recon: Horizontal Correlation.</a> : Sm9l <br><br>
+              <a href="https://medium.com/@Sm9l/bug-bounty-recon-vertical-correlation-and-the-secret-to-succeeding-cdd532c777c9#85d6" target="_blank">Bug Bounty Recon: Vertical Correlation (and the secret to succeeding).</a> : Sm9l <br><br>
+              <a href="https://infosecwriteups.com/p1-easy-access-to-grafana-dashboard-9b7df82329b6" target="_blank">P1: Easy Access to Grafana Dashboard</a> : Mahendra Purbia (Mah3Sec_) <br><br>
+              <a href="https://0xmayankgarg.medium.com/how-a-simple-bug-let-me-buy-anything-for-free-76d2fd253949" target="_blank">How a simple manipulation let me buy anything for free?</a> : Mayank Garg <br><br>
+              <a href="https://blog.sentinelrecovery.com/otp-verification-message-6bc48cede15f" target="_blank">How I bypassed the OTP verification process? Part 1</a> : Sentinel Recovery <br><br>
+              <a href="https://fulplan.medium.com/a-web-server-for-bug-bounty-hunters-part-1-feb5ad68821a" target="_blank">A Web Server For Bug Bounty Hunters (Part 1)</a> : FulPlan Mutasim <br><br>
+              <a href="https://medium.com/@ls5747670/how-to-make-a-drone-with-hacking-machine-installed-in-it-731e9a71e067" target="_blank">This is How I built a Drone with Hacking Machine installed in it</a> : Harjot Singh <br><br>
+            </p>
+          <br><br>
+        </p>
+        <br><br>
+        <h3>Day 2: Jan 2 2022</h3><br>
+        <p>
+          <h5>Activites</h5><br>
+          <p>
+
+          </p>
+
+          <h5>Blog Reads</h5>
+          <p>
+
+          </p>
+        </p>
+
+
         <br><br>
         <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
