--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -40,7 +40,7 @@
         <h2 id="week1">Week 1</h2> <br><br><br>
         <h3>Day 1: Jan 1 2022</h3><br>
         <p>
-          <h5>Activities</h5><br>
+          <h5>My Activities</h5><br>
             <p>
               <a href="https://tryhackme.com/room/blog" target="_blank">Blog</a> : TryHackMe <br><br>
               <a href="https://tryhackme.com/jr/burpsuiteintruder" target="_blank">Burp Suite: Intruder</a> : TryHackMe <br><br>
@@ -68,7 +68,7 @@
         <br><br>
         <h3>Day 2: Jan 2 2022</h3><br>
         <p>
-          <h5>Activites</h5><br>
+          <h5>My Activites</h5><br>
             <p>
               <a href="https://tryhackme.com/jr/burpsuiteom" target="_blank">Burp Suite: Other Modules</a> : TryHackMe <br><br>
               <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
@@ -93,7 +93,7 @@
         <br><br>
         <h3>Day 3: Jan 3 2023</h3><br>
         <p>
-          <h5>Activites</h5><br>
+          <h5>My Activites</h5><br>
             <p>
               <a href="https://tryhackme.com/room/burpsuiteextender" target="_blank">Burp Suite: Extender</a> : TryHackMe <br><br>
               <a href="https://tryhackme.com/room/hackerofthehill" target="_blank">Hacker of the Hill #1</a> : TryHackMe <br><br>
@@ -121,17 +121,22 @@
           <br><br>
         </p>
         <br><br>
-        <h3>Day 2: Jan 2 2022</h3><br>
+        <h3>Day 4: Jan 4 2022</h3><br>
         <p>
-          <h5>Activites</h5><br>
+          <h5>My Activites</h5><br>
           <p>
 
           </p>
-
+          <br><br>
           <h5>Blog Reads</h5>
-          <p>
-
-          </p>
+            <p>
+              <a href="https://sapt.medium.com/some-tools-for-subdomain-enumeration-cyber-sapiens-internship-task-5-2ac09b7691f7" target="_blank">Some Tools for Subdomain Enumeration-Cyber Sapiens Internship Task-5</a> : Prajit Sindhkar <br><br>
+              <a href="https://sapt.medium.com/favorite-hackers-and-hacking-groups-cyber-sapiens-internship-task-1-9a4c8b411441" target="_blank">Favorite Hackers and Hacking Groups-Cyber Sapiens Internship Task-1</a> : Prajit Sindhkar <br><br>
+              <a href="https://medium.com/@ashikagupta28/oversimplified-bug-bounty-bad5ac87d947" target="_blank">Oversimplified — Bug Bounty</a> : Ashikka Gupta <br><br>
+              <a href="https://infosecwriteups.com/exploiting-xss-with-cool-tricks-75a605a0115b" target="_blank">Exploiting XSS with Cool Tricks</a> : Ethical Kaps <br><br>
+              <a href="https://medium.com/@prayas.kulshresth/all-your-files-belongs-to-me-an-idor-story-2b2b130daf1c" target="_blank">All your files belongs to Me (An IDOR Story)</a> : Prayas Kulshrestha <br><br>
+              <a href="https://medium.com/@tushar.tilak.sharma/p5-to-p1-intresting-account-takeover-6e59b879494b" target="_blank">P5 to P1: Interesting Account Takeover</a> : Tushar Sharma <br><br>
+            </p>
         </p>
 
 
